Uh oh, added styles so fixed elements are visible.

--- a/public/css/example.css
+++ b/public/css/example.css
@@ -6,14 +6,15 @@ body {
 }
 h1 {
 	font-size: 1.6em;
-	color: #909090;
+}
+h2 {
+	font-size: 1.5em;
 }
 p, h1, h2, h3, h4, h5, h6, a, span, div {
 	font-family: "Malabar LT W01 Regular", Georgia, serif;
 }
 p, a {
 	font-size: 0.813em;
-	color: #909090;
 }
 p>a {
 	font-size: 1em;
@@ -23,4 +24,12 @@ p {
 }
 hr {
 	clear: both;
+}
+
+.bigger {
+	font-size: 1.1em;
+	line-height: 1.5em;
+}
+h1, h2, h3, h4, h5, h6, p, a, .grey {
+	color: #909090;
 }
